--- a/PlanIt/index.html
+++ b/PlanIt/index.html
@@ -7,7 +7,7 @@
     <title> PlanIt - Plan your tasks securely on Cloud</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-cream"></div>
     <script src="https://kit.fontawesome.com/f66e464da4.js" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
